// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VmDetails Renders with details: Details 1`] = `
<span
  className="container_f12l79nr"
>
  <span
    className="icon_fptpv5r jp-VmStatusIcon"
    onClick={[Function]}
    title="Show all details"
  />
  <span
    className="attribute_f1pfon3k"
    key="0"
    onClick={[Function]}
    title="VM Name - Click to cycle"
  >
    pytorch
     | 
  </span>
  <span
    className="attribute_f1pfon3k"
    key="1"
    onClick={[Function]}
    title="Project - Click to cycle"
  >
    test-project
  </span>
</span>
`;

exports[`VmDetails Renders with details: Retrieving 1`] = `
<span
  className="container_f12l79nr"
>
  <span
    className="icon_fptpv5r jp-VmStatusIcon"
    onClick={[Function]}
    title="Show all details"
  />
  Retrieving VM Details...
</span>
`;

exports[`VmDetails Renders with error: Received Error 1`] = `
<span
  className="container_f12l79nr"
>
  <span
    className="icon_fptpv5r jp-VmStatusIcon"
    onClick={[Function]}
    title="Show all details"
  />
  Error retrieving VM Details
</span>
`;

exports[`VmDetails Renders with error: Retrieving 1`] = `
<span
  className="container_f12l79nr"
>
  <span
    className="icon_fptpv5r jp-VmStatusIcon"
    onClick={[Function]}
    title="Show all details"
  />
  Retrieving VM Details...
</span>
`;
